--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -19,6 +19,13 @@
 \newcommand{\ie}{\emph{i.e.}}
 \newcommand{\eg}{\emph{e.g.}}
 
+\newenvironment{TODO} {
+\begin{quote}
+{\it TODO:}
+}{
+\end{quote}
+}
+
 \newenvironment{example}{
 \begin{quote}
 {\it Example}.
