--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -88,7 +88,7 @@
 
 \makeindex
 
-\title{Chapel Language Specification 0.702}
+\title{Chapel Language Specification 0.703 (internal)}
 
 \author{Cray Inc\\
 411 First Ave S, Suite 600\\
