Added coforall and range to the list of keywords.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10509 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Lexical_Structure.tex
+++ b/spec/Lexical_Structure.tex
@@ -60,17 +60,17 @@ The following are legal identifiers:
 The following keywords are reserved:
 \begin{chapel}
 atomic      begin       bool        break       by
-class       cobegin     complex     config      const
-continue    def         distributed do          domain
-else        enum        false       for         forall
-goto        if          imag        in          int
-inout       iterator    let         locale      module
-nil         of          on          ordered     otherwise
-out         param       pragma      real        record
-reduce      return      scan        select      serial
-single      sync        then        true        type
-uint        union       use         var         when
-where       while       yield
+class       cobegin     coforall    complex     config
+const       continue    def         distributed do
+domain      else        enum        false       for
+forall      goto        if          imag        in
+int         inout       iterator    let         locale
+module      nil         of          on          ordered
+otherwise   out         param       pragma      range
+real        record      reduce      return      scan
+select      serial      single      sync        then
+true        type        uint        union       use
+var         when        where       while       yield
 \end{chapel}
 
 \subsubsection{Literals}
