--- a/spec/chapel_listing.tex
+++ b/spec/chapel_listing.tex
@@ -14,7 +14,7 @@
       nil,
       of, on, opaque, ordered, otherwise, out,
       param, pragma,
-      real, record, reduce, return,
+      range, real, record, reduce, return,
       scan, select, serial, single, sparse, string, sync,
       then, true, type,
       uint, union, use,
