--- a/spec/Iterators.tex
+++ b/spec/Iterators.tex
@@ -168,3 +168,26 @@ foo[1..3, 4..6];
 \end{chapel}
 then the output is ``1 4 1 5 1 6 2 4 2 5 2 6 3 4 3 5 3 6 ''.
 \end{example}
+
+\subsubsection{Promotion and Evaluation Order}
+
+The evaluation of an iterator is interleaved with the evaluation of
+the promoted expression or function.  The values produced by the
+iterator are not evaluated first.  This means that the array semantics
+of array programming languages are not maintained.
+
+\begin{example}
+If \chpl{A} is an array declared over the indices \chpl{1..5}, then
+the following codes are not equivalent:
+\begin{chapel}
+A[2..4] = A[1..3] + A[3..5];
+\end{chapel}
+and
+\begin{chapel}
+var T = A[1..3] + A[3..5];
+A[2..4] = T;
+\end{chapel}
+This follows because, in the former code, some of the new values that
+are assigned to \chpl{A} may be read to compute the sum depending on
+the amount of concurrency in the promotion.
+\end{example}
